--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "my-app",
   "version": "0.1.0",
   "private": true,
-  "homepage": "http://ELAYOUCHI-FATIMA-EZZAHRA.github.io/TodoList",
+  "homepage": "http://github.com/fati-ezzahra/responsive-todo-list",
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^1.2.36",
     "@fortawesome/free-solid-svg-icons": "^5.15.4",
